# debater-early-access-program-sdk

./: .gitignore  README.md  Release  pyproject.toml  requirements.txt  setup.py
debater_python_api/api/: debater_api.py
debater_python_api/api/clients/: abstract_client.py  keypoints_admin_client.py  keypoints_client.py
debater_python_api/api/clients/key_point_analysis/: KpAnalysisUtils.py  KpaExceptions.py  KpaResult.py  docx_generator.py  graph_generator.py  old_json.json  utils.py
debater_python_api/api/clients/key_point_summarization/: KpsResult.py  docx_generator.py  graph_generator.py  utils.py
debater_python_api/examples/: keypoints_example.py
debater_python_api/examples/usecases/: kp_based_survey.py  survey.py
debater_python_api/integration_tests/api/clients/: ServicesIT.py
debater_python_api/utils/: kp_analysis_utils.py
key_points_summarization_api/api/clients/: keypoints_admin_client.py  keypoints_client.py
key_points_summarization_api/api/clients/key_point_summarization/: KpsExceptions.py  KpsResult.py  docx_generator.py  graph_generator.py
