# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debater_python_api"
version = "5.1.3"
description = "Project Debater Early Access Program API sdk for python"
readme = "README.md"
authors = [{ name = "Elad Venezian", email = "eladv@il.ibm.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "scikit-learn",
    "matplotlib",
    "numpy",
    "pandas",
    "python-docx",
    "networkx"
]
requires-python = ">=3.6"

#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

#[project.urls]
#Homepage = "https://github.com/realpython/reader"

#[project.scripts]
#realpython = "reader.__main__:main"