# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "key-points-summarization-sdk"
version = "1.0.0"
description = "A python API sdk for Key Points Summarization"
readme = "README.md"
authors = [{ name = "Elad Venezian", email = "eladv@il.ibm.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "scikit-learn",
    "numpy",
    "pandas",
    "python-docx",
    "networkx"
]
requires-python = ">=3.6"
